# opavote-result-parser

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
src/opavote_result_parser/: cli.py  parse.py  transform.py
tests/: looney_tunes.html  test_parser.py
